// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepoHexSmall should render with a link 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.03125rem 0.25rem;
  background: #464968;
  border-radius: 0.25rem;
  font-family: PT Mono;
  font-style: normal;
  font-weight: bold;
  font-size: 0.6875rem;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0.075rem;
  -moz-letter-spacing: 0.075rem;
  -ms-letter-spacing: 0.075rem;
  letter-spacing: 0.075rem;
  text-transform: uppercase;
  color: #E2E2EE;
}

.c2 {
  display: inline-block;
  font-weight: 700;
  font-size: 0.8125rem;
  line-height: 1.0625rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  text-align: center;
  color: #307AE8;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
  cursor: pointer;
  color: #307AE8;
}

.c0 {
  margin-top: 3.125rem;
  margin-bottom: 3.125rem;
  background-color: #1E1F2E;
  position: relative;
  min-height: 6.25rem;
  -webkit-transition: 150ms background-color ease;
  transition: 150ms background-color ease;
  pointer-events: auto;
}

.c0:before {
  position: absolute;
  content: '';
  -webkit-clip-path: polygon(50% 0%,0% 100%,100% 100%);
  clip-path: polygon(50% 0%,0% 100%,100% 100%);
  width: 100%;
  height: 3.125rem;
  background-color: #1E1F2E;
  top: -3.09375rem;
  -webkit-transition: 150ms background-color ease;
  transition: 150ms background-color ease;
  left: 0;
}

.c0:after {
  content: '';
  -webkit-clip-path: polygon(50% 100%,0 0,100% 0);
  clip-path: polygon(50% 100%,0 0,100% 0);
  position: absolute;
  width: 100%;
  height: 3.125rem;
  background-color: #1E1F2E;
  bottom: -3.125rem;
  -webkit-transition: 150ms background-color ease;
  transition: 150ms background-color ease;
  left: 0;
}

.c0:hover {
  background-color: #292B3D;
  cursor: pointer;
}

.c0:hover::before,
.c0:hover::after {
  background-color: #292B3D;
}

.c0:active {
  background-color: #1E1F2E;
  cursor: pointer;
}

.c0:active::before,
.c0:active::after {
  background-color: #1E1F2E;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 > *:not(:last-child) {
  margin-right: 0.625rem;
}

.c3 {
  font-family: PT Mono;
  font-style: normal;
  font-weight: bold;
  font-size: 0.9375rem;
  line-height: 1.5rem;
  text-align: center;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  color: #307AE8;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 10.625rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.9375rem 1.25rem;
  width: 100%;
}

.emotion-1 {
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
  -webkit-tap-highlight-color: transparent;
  color: inherit;
  font-size: inherit;
  line-height: 1.55;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:focus {
  outline-offset: 2px;
  outline: 2px solid #339af0;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  margin-top: 0.4375rem;
}

<a
  class="c0"
  href="/gh/testOrg/testRepoHexSmall"
>
  <div
    class="c1"
  >
    <div
      class="emotion-0 c2 c3 emotion-1"
    >
      testRepoHexSmall
    </div>
    <div
      class="c4"
    />
    <div
      class="c5 emotion-2"
    >
      testOrg
    </div>
  </div>
</a>
`;

exports[`RepoHexSmall should render with gitPoapCount 1`] = `
.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.03125rem 0.25rem;
  background: #464968;
  border-radius: 0.25rem;
  font-family: PT Mono;
  font-style: normal;
  font-weight: bold;
  font-size: 0.6875rem;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0.075rem;
  -moz-letter-spacing: 0.075rem;
  -ms-letter-spacing: 0.075rem;
  letter-spacing: 0.075rem;
  text-transform: uppercase;
  color: #E2E2EE;
}

.c6 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 200ms fill ease,200ms stroke ease,200ms color ease;
  transition: 200ms fill ease,200ms stroke ease,200ms color ease;
  height: 1.125rem;
  width: 1.125rem;
  color: #838495;
}

.c6 path {
  -webkit-transition: 200ms fill ease;
  transition: 200ms fill ease;
}

.c3 {
  display: inline-block;
  font-weight: 700;
  font-size: 0.8125rem;
  line-height: 1.0625rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  text-align: center;
  color: #307AE8;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
  cursor: pointer;
  color: #307AE8;
}

.c1 {
  margin-top: 3.125rem;
  margin-bottom: 3.125rem;
  background-color: #1E1F2E;
  position: relative;
  min-height: 6.25rem;
  -webkit-transition: 150ms background-color ease;
  transition: 150ms background-color ease;
  pointer-events: auto;
}

.c1:before {
  position: absolute;
  content: '';
  -webkit-clip-path: polygon(50% 0%,0% 100%,100% 100%);
  clip-path: polygon(50% 0%,0% 100%,100% 100%);
  width: 100%;
  height: 3.125rem;
  background-color: #1E1F2E;
  top: -3.09375rem;
  -webkit-transition: 150ms background-color ease;
  transition: 150ms background-color ease;
  left: 0;
}

.c1:after {
  content: '';
  -webkit-clip-path: polygon(50% 100%,0 0,100% 0);
  clip-path: polygon(50% 100%,0 0,100% 0);
  position: absolute;
  width: 100%;
  height: 3.125rem;
  background-color: #1E1F2E;
  bottom: -3.125rem;
  -webkit-transition: 150ms background-color ease;
  transition: 150ms background-color ease;
  left: 0;
}

.c1:hover {
  background-color: #292B3D;
  cursor: pointer;
}

.c1:hover::before,
.c1:hover::after {
  background-color: #292B3D;
}

.c1:active {
  background-color: #1E1F2E;
  cursor: pointer;
}

.c1:active::before,
.c1:active::after {
  background-color: #1E1F2E;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 15.625rem;
  pointer-events: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 > *:not(:last-child) {
  margin-right: 0.625rem;
}

.c4 {
  font-family: PT Mono;
  font-style: normal;
  font-weight: bold;
  font-size: 0.9375rem;
  line-height: 1.5rem;
  text-align: center;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  color: #307AE8;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 10.625rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.9375rem 1.25rem;
  width: 100%;
}

.emotion-1 {
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
  -webkit-tap-highlight-color: transparent;
  color: inherit;
  font-size: inherit;
  line-height: 1.55;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:focus {
  outline-offset: 2px;
  outline: 2px solid #339af0;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3>* {
  box-sizing: border-box;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.emotion-3 path {
  -webkit-transition: 200ms fill ease;
  transition: 200ms fill ease;
  fill: #838495;
}

.emotion-5 {
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
  -webkit-tap-highlight-color: transparent;
  color: inherit;
  font-size: 14px;
  line-height: 1.55;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  text-transform: uppercase;
  margin-left: 0.375rem;
}

.emotion-5:focus {
  outline-offset: 2px;
  outline: 2px solid #339af0;
}

.emotion-5:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  margin-top: 0.4375rem;
}

<div
  class="c0 "
>
  <a
    class="c1"
    href="/gh/testOrg/testRepoHexSmall"
  >
    <div
      class="c2"
    >
      <div
        class="emotion-0 c3 c4 emotion-1"
      >
        testRepoHexSmall
      </div>
      <div
        class="c5"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <svg
            class="c6"
            fill="none"
            height="12"
            viewBox="0 0 15 17"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.383 11.144l1.691 3.092c.176.291 0 .496-.408.496l-1.488.058c-.32 0-.73.292-.846.554l-.788 1.46a.314.314 0 01-.583 0s-1.05-1.926-1.692-3.18c.166-.048.293-.115.397-.17l.07-.035 3.646-2.275zM.539 14.236l1.692-3.092 3.617 2.275c.054.022.104.047.156.074.089.046.182.094.31.13a173.077 173.077 0 01-1.691 3.18.315.315 0 01-.584 0l-.787-1.459c-.117-.291-.525-.554-.847-.554l-1.487-.058c-.438 0-.496-.234-.38-.496zM13.345 8.43c0 .817-.496 1.663-1.225 2.072l-3.588 1.984a2.81 2.81 0 01-1.226.292c-.408 0-.846-.059-1.225-.292l-3.588-2.013c-.73-.408-1.225-1.254-1.225-2.071V4.376c0-.817.496-1.663 1.225-2.071L6.081.29C6.43.116 6.869 0 7.306 0c.409 0 .788.058 1.226.291l3.588 2.013c.787.41 1.225 1.196 1.225 2.071V8.43zm-6.943 2.393c.291.175.583.204.904.204.32 0 .641-.059.904-.204l2.597-1.459c.554-.32.904-.904.904-1.517V4.93c0-.671-.321-1.225-.904-1.517L8.21 1.954c-.32-.175-.583-.204-.904-.204-.321 0-.642.088-.904.204L3.805 3.413c-.554.32-.904.904-.904 1.517v2.917c0 .613.379 1.226.904 1.517l2.597 1.459zm-.513-5.694a.365.365 0 00-.626-.249L4.214 5.96a.365.365 0 00-.003.504l1.05 1.109a.365.365 0 00.528-.502l-.808-.854.805-.829a.365.365 0 00.103-.259zm3.052-.331a.364.364 0 00-.118.594l.825.825-.828.85a.365.365 0 10.522.51l1.079-1.109a.365.365 0 00-.003-.512l-1.08-1.08a.364.364 0 00-.397-.078zm-.77.047a.365.365 0 00-.12-.078h.001a.364.364 0 00-.475.201l-.933 2.305a.364.364 0 10.676.274l.933-2.305a.365.365 0 00-.082-.397z"
              fill="#838495"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="emotion-0 emotion-5"
          >
            5
          </span>
        </div>
      </div>
      <div
        class="c7 emotion-6"
      >
        testOrg
      </div>
    </div>
  </a>
</div>
`;

exports[`RepoHexSmall should render with memberCount 1`] = `
.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.03125rem 0.25rem;
  background: #464968;
  border-radius: 0.25rem;
  font-family: PT Mono;
  font-style: normal;
  font-weight: bold;
  font-size: 0.6875rem;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0.075rem;
  -moz-letter-spacing: 0.075rem;
  -ms-letter-spacing: 0.075rem;
  letter-spacing: 0.075rem;
  text-transform: uppercase;
  color: #E2E2EE;
}

.c6 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 200ms fill ease,200ms stroke ease,200ms color ease;
  transition: 200ms fill ease,200ms stroke ease,200ms color ease;
  height: 1.125rem;
  width: 1.125rem;
  color: #838495;
}

.c6 path {
  -webkit-transition: 200ms fill ease;
  transition: 200ms fill ease;
}

.c3 {
  display: inline-block;
  font-weight: 700;
  font-size: 0.8125rem;
  line-height: 1.0625rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  text-align: center;
  color: #307AE8;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
  cursor: pointer;
  color: #307AE8;
}

.c1 {
  margin-top: 3.125rem;
  margin-bottom: 3.125rem;
  background-color: #1E1F2E;
  position: relative;
  min-height: 6.25rem;
  -webkit-transition: 150ms background-color ease;
  transition: 150ms background-color ease;
  pointer-events: auto;
}

.c1:before {
  position: absolute;
  content: '';
  -webkit-clip-path: polygon(50% 0%,0% 100%,100% 100%);
  clip-path: polygon(50% 0%,0% 100%,100% 100%);
  width: 100%;
  height: 3.125rem;
  background-color: #1E1F2E;
  top: -3.09375rem;
  -webkit-transition: 150ms background-color ease;
  transition: 150ms background-color ease;
  left: 0;
}

.c1:after {
  content: '';
  -webkit-clip-path: polygon(50% 100%,0 0,100% 0);
  clip-path: polygon(50% 100%,0 0,100% 0);
  position: absolute;
  width: 100%;
  height: 3.125rem;
  background-color: #1E1F2E;
  bottom: -3.125rem;
  -webkit-transition: 150ms background-color ease;
  transition: 150ms background-color ease;
  left: 0;
}

.c1:hover {
  background-color: #292B3D;
  cursor: pointer;
}

.c1:hover::before,
.c1:hover::after {
  background-color: #292B3D;
}

.c1:active {
  background-color: #1E1F2E;
  cursor: pointer;
}

.c1:active::before,
.c1:active::after {
  background-color: #1E1F2E;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 15.625rem;
  pointer-events: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 > *:not(:last-child) {
  margin-right: 0.625rem;
}

.c4 {
  font-family: PT Mono;
  font-style: normal;
  font-weight: bold;
  font-size: 0.9375rem;
  line-height: 1.5rem;
  text-align: center;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  color: #307AE8;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 10.625rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.9375rem 1.25rem;
  width: 100%;
}

.emotion-1 {
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
  -webkit-tap-highlight-color: transparent;
  color: inherit;
  font-size: inherit;
  line-height: 1.55;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:focus {
  outline-offset: 2px;
  outline: 2px solid #339af0;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3>* {
  box-sizing: border-box;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.emotion-3 path {
  -webkit-transition: 200ms fill ease;
  transition: 200ms fill ease;
  fill: #838495;
}

.emotion-5 {
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
  -webkit-tap-highlight-color: transparent;
  color: inherit;
  font-size: 14px;
  line-height: 1.55;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  text-transform: uppercase;
  margin-left: 0.375rem;
}

.emotion-5:focus {
  outline-offset: 2px;
  outline: 2px solid #339af0;
}

.emotion-5:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  margin-top: 0.4375rem;
}

<div
  class="c0 "
>
  <a
    class="c1"
    href="/gh/testOrg/testRepoHexSmall"
  >
    <div
      class="c2"
    >
      <div
        class="emotion-0 c3 c4 emotion-1"
      >
        testRepoHexSmall
      </div>
      <div
        class="c5"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <svg
            class="c6"
            fill="none"
            height="11"
            viewBox="0 0 78 65"
            width="13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4.852 42.635a16.567 16.567 0 0111.715-4.852H41.7a16.566 16.566 0 0116.567 16.566v6.284a4 4 0 11-8 0v-6.284a8.567 8.567 0 00-8.567-8.566H16.567A8.567 8.567 0 008 54.349v6.284a4 4 0 11-8 0v-6.284c0-4.393 1.745-8.607 4.852-11.714zM29.133 8.083a8.567 8.567 0 100 17.133 8.567 8.567 0 000-17.133zM12.567 16.65C12.567 7.5 19.984.083 29.133.083 38.283.083 45.7 7.5 45.7 16.65s-7.417 16.566-16.567 16.566S12.567 25.8 12.567 16.65zM59.819 41.191a4 4 0 014.873-2.873 16.567 16.567 0 0112.425 16.029v6.286a4 4 0 01-8 0v-6.282a8.567 8.567 0 00-6.425-8.287 4 4 0 01-2.873-4.873zM47.25 3.5A4 4 0 0152.117.616a16.567 16.567 0 010 32.098 4 4 0 01-1.984-7.75 8.567 8.567 0 000-16.598 4 4 0 01-2.883-4.868z"
              fill="#838495"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="emotion-0 emotion-5"
          >
            10
          </span>
        </div>
      </div>
      <div
        class="c7 emotion-6"
      >
        testOrg
      </div>
    </div>
  </a>
</div>
`;

exports[`RepoHexSmall should render with name and orgName 1`] = `
.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.03125rem 0.25rem;
  background: #464968;
  border-radius: 0.25rem;
  font-family: PT Mono;
  font-style: normal;
  font-weight: bold;
  font-size: 0.6875rem;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0.075rem;
  -moz-letter-spacing: 0.075rem;
  -ms-letter-spacing: 0.075rem;
  letter-spacing: 0.075rem;
  text-transform: uppercase;
  color: #E2E2EE;
}

.c3 {
  display: inline-block;
  font-weight: 700;
  font-size: 0.8125rem;
  line-height: 1.0625rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  text-align: center;
  color: #307AE8;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
  cursor: pointer;
  color: #307AE8;
}

.c1 {
  margin-top: 3.125rem;
  margin-bottom: 3.125rem;
  background-color: #1E1F2E;
  position: relative;
  min-height: 6.25rem;
  -webkit-transition: 150ms background-color ease;
  transition: 150ms background-color ease;
  pointer-events: auto;
}

.c1:before {
  position: absolute;
  content: '';
  -webkit-clip-path: polygon(50% 0%,0% 100%,100% 100%);
  clip-path: polygon(50% 0%,0% 100%,100% 100%);
  width: 100%;
  height: 3.125rem;
  background-color: #1E1F2E;
  top: -3.09375rem;
  -webkit-transition: 150ms background-color ease;
  transition: 150ms background-color ease;
  left: 0;
}

.c1:after {
  content: '';
  -webkit-clip-path: polygon(50% 100%,0 0,100% 0);
  clip-path: polygon(50% 100%,0 0,100% 0);
  position: absolute;
  width: 100%;
  height: 3.125rem;
  background-color: #1E1F2E;
  bottom: -3.125rem;
  -webkit-transition: 150ms background-color ease;
  transition: 150ms background-color ease;
  left: 0;
}

.c1:hover {
  background-color: #292B3D;
  cursor: pointer;
}

.c1:hover::before,
.c1:hover::after {
  background-color: #292B3D;
}

.c1:active {
  background-color: #1E1F2E;
  cursor: pointer;
}

.c1:active::before,
.c1:active::after {
  background-color: #1E1F2E;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 15.625rem;
  pointer-events: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 > *:not(:last-child) {
  margin-right: 0.625rem;
}

.c4 {
  font-family: PT Mono;
  font-style: normal;
  font-weight: bold;
  font-size: 0.9375rem;
  line-height: 1.5rem;
  text-align: center;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  color: #307AE8;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 10.625rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.9375rem 1.25rem;
  width: 100%;
}

.emotion-1 {
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
  -webkit-tap-highlight-color: transparent;
  color: inherit;
  font-size: inherit;
  line-height: 1.55;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:focus {
  outline-offset: 2px;
  outline: 2px solid #339af0;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  margin-top: 0.4375rem;
}

<div
  class="c0 "
>
  <a
    class="c1"
    href="/gh/testOrg/testRepoHexSmall"
  >
    <div
      class="c2"
    >
      <div
        class="emotion-0 c3 c4 emotion-1"
      >
        testRepoHexSmall
      </div>
      <div
        class="c5"
      />
      <div
        class="c6 emotion-2"
      >
        testOrg
      </div>
    </div>
  </a>
</div>
`;

exports[`RepoHexSmall should render with stars 1`] = `
.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.03125rem 0.25rem;
  background: #464968;
  border-radius: 0.25rem;
  font-family: PT Mono;
  font-style: normal;
  font-weight: bold;
  font-size: 0.6875rem;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0.075rem;
  -moz-letter-spacing: 0.075rem;
  -ms-letter-spacing: 0.075rem;
  letter-spacing: 0.075rem;
  text-transform: uppercase;
  color: #E2E2EE;
}

.c6 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 200ms fill ease,200ms stroke ease,200ms color ease;
  transition: 200ms fill ease,200ms stroke ease,200ms color ease;
  height: 1.125rem;
  width: 1.125rem;
  color: #838495;
}

.c6 path {
  -webkit-transition: 200ms fill ease;
  transition: 200ms fill ease;
}

.c3 {
  display: inline-block;
  font-weight: 700;
  font-size: 0.8125rem;
  line-height: 1.0625rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  text-align: center;
  color: #307AE8;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
  cursor: pointer;
  color: #307AE8;
}

.c1 {
  margin-top: 3.125rem;
  margin-bottom: 3.125rem;
  background-color: #1E1F2E;
  position: relative;
  min-height: 6.25rem;
  -webkit-transition: 150ms background-color ease;
  transition: 150ms background-color ease;
  pointer-events: auto;
}

.c1:before {
  position: absolute;
  content: '';
  -webkit-clip-path: polygon(50% 0%,0% 100%,100% 100%);
  clip-path: polygon(50% 0%,0% 100%,100% 100%);
  width: 100%;
  height: 3.125rem;
  background-color: #1E1F2E;
  top: -3.09375rem;
  -webkit-transition: 150ms background-color ease;
  transition: 150ms background-color ease;
  left: 0;
}

.c1:after {
  content: '';
  -webkit-clip-path: polygon(50% 100%,0 0,100% 0);
  clip-path: polygon(50% 100%,0 0,100% 0);
  position: absolute;
  width: 100%;
  height: 3.125rem;
  background-color: #1E1F2E;
  bottom: -3.125rem;
  -webkit-transition: 150ms background-color ease;
  transition: 150ms background-color ease;
  left: 0;
}

.c1:hover {
  background-color: #292B3D;
  cursor: pointer;
}

.c1:hover::before,
.c1:hover::after {
  background-color: #292B3D;
}

.c1:active {
  background-color: #1E1F2E;
  cursor: pointer;
}

.c1:active::before,
.c1:active::after {
  background-color: #1E1F2E;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 15.625rem;
  pointer-events: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 > *:not(:last-child) {
  margin-right: 0.625rem;
}

.c4 {
  font-family: PT Mono;
  font-style: normal;
  font-weight: bold;
  font-size: 0.9375rem;
  line-height: 1.5rem;
  text-align: center;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  color: #307AE8;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 10.625rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.9375rem 1.25rem;
  width: 100%;
}

.emotion-1 {
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
  -webkit-tap-highlight-color: transparent;
  color: inherit;
  font-size: inherit;
  line-height: 1.55;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:focus {
  outline-offset: 2px;
  outline: 2px solid #339af0;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3>* {
  box-sizing: border-box;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.emotion-3 path {
  -webkit-transition: 200ms fill ease;
  transition: 200ms fill ease;
  fill: #838495;
}

.emotion-5 {
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
  -webkit-tap-highlight-color: transparent;
  color: inherit;
  font-size: 14px;
  line-height: 1.55;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  text-transform: uppercase;
  margin-left: 0.375rem;
}

.emotion-5:focus {
  outline-offset: 2px;
  outline: 2px solid #339af0;
}

.emotion-5:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  margin-top: 0.4375rem;
}

<div
  class="c0 "
>
  <a
    class="c1"
    href="/gh/testOrg/testRepoHexSmall"
  >
    <div
      class="c2"
    >
      <div
        class="emotion-0 c3 c4 emotion-1"
      >
        testRepoHexSmall
      </div>
      <div
        class="c5"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <svg
            class="c6"
            fill="none"
            height="12"
            viewBox="0 0 15 17"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.383 11.144l1.691 3.092c.176.291 0 .496-.408.496l-1.488.058c-.32 0-.73.292-.846.554l-.788 1.46a.314.314 0 01-.583 0s-1.05-1.926-1.692-3.18c.166-.048.293-.115.397-.17l.07-.035 3.646-2.275zM.539 14.236l1.692-3.092 3.617 2.275c.054.022.104.047.156.074.089.046.182.094.31.13a173.077 173.077 0 01-1.691 3.18.315.315 0 01-.584 0l-.787-1.459c-.117-.291-.525-.554-.847-.554l-1.487-.058c-.438 0-.496-.234-.38-.496zM13.345 8.43c0 .817-.496 1.663-1.225 2.072l-3.588 1.984a2.81 2.81 0 01-1.226.292c-.408 0-.846-.059-1.225-.292l-3.588-2.013c-.73-.408-1.225-1.254-1.225-2.071V4.376c0-.817.496-1.663 1.225-2.071L6.081.29C6.43.116 6.869 0 7.306 0c.409 0 .788.058 1.226.291l3.588 2.013c.787.41 1.225 1.196 1.225 2.071V8.43zm-6.943 2.393c.291.175.583.204.904.204.32 0 .641-.059.904-.204l2.597-1.459c.554-.32.904-.904.904-1.517V4.93c0-.671-.321-1.225-.904-1.517L8.21 1.954c-.32-.175-.583-.204-.904-.204-.321 0-.642.088-.904.204L3.805 3.413c-.554.32-.904.904-.904 1.517v2.917c0 .613.379 1.226.904 1.517l2.597 1.459zm-.513-5.694a.365.365 0 00-.626-.249L4.214 5.96a.365.365 0 00-.003.504l1.05 1.109a.365.365 0 00.528-.502l-.808-.854.805-.829a.365.365 0 00.103-.259zm3.052-.331a.364.364 0 00-.118.594l.825.825-.828.85a.365.365 0 10.522.51l1.079-1.109a.365.365 0 00-.003-.512l-1.08-1.08a.364.364 0 00-.397-.078zm-.77.047a.365.365 0 00-.12-.078h.001a.364.364 0 00-.475.201l-.933 2.305a.364.364 0 10.676.274l.933-2.305a.365.365 0 00-.082-.397z"
              fill="#838495"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="emotion-0 emotion-5"
          >
            15
          </span>
        </div>
      </div>
      <div
        class="c7 emotion-6"
      >
        testOrg
      </div>
    </div>
  </a>
</div>
`;
